slider: completed web slider

--- a/index.html
+++ b/index.html
@@ -54,13 +54,19 @@
         </header>
 
         <div class="body-img-container">
-            <img src="./assets/images/image.png" alt="">
+            <div class="image-box">
+                <img class="main-image" src="./assets/images/image.png" alt="">
+            </div>
         </div>
 
         <div class="body-text-container">
             <div class="body-text">
                 <p>Fashion Has To Reflect
-                    Who You Are</p>
+                    Who You Are mah 4 dey try dress nice</p>
+            </div>
+
+            <div class="body-number">
+                <p>03</p>
             </div>
         </div>
 
@@ -68,7 +74,7 @@
             <div class="con">
                 <div class="btn-footer-container">
                     <div>
-                        <button>
+                        <button class="slider-btn back-btn">
                             <svg width="50" height="20" viewBox="0 0 50 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M10 12H50V8H10V0L0 10L10 20V12Z" fill="#14304C"/>
                                 </svg>
@@ -76,7 +82,7 @@
                         </button>
                     </div>
                     <div>
-                        <button>
+                        <button class="slider-btn forward-btn">
                             <svg width="50" height="20" viewBox="0 0 50 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M40 12H0V8H40V0L50 10L40 20V12Z" fill="#14304C"/>
                                 </svg>
@@ -99,5 +105,7 @@
             </div>
         </div>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
