font: made some text changes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="body-text-container">
             <div class="body-text">
                 <p>Fashion Has To Reflect
-                    Who You Are mah 4 dey try dress nice</p>
+                    Who You Are Mah 4 Dey Try Dress Nice</p>
             </div>
 
             <div class="body-number">
