--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="body-img-container">
             <div class="image-box">
-                <img class="main-image" src="./assets/images/image.png" alt="">
+                <img class="main-image" src="" alt="">
             </div>
         </div>
 
@@ -66,7 +66,7 @@
             </div>
 
             <div class="body-number">
-                <p>03</p>
+                <p class="number"></p>
             </div>
         </div>
 
@@ -93,9 +93,9 @@
     
                 <div class="social-link-container">
                     <ul class="footer-ul">
-                        <li><a href="">Facebook</a></li>
-                        <li><a href="">Twitter</a></li>
-                        <li><a href="">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/hassan.adigun.73/">Facebook</a></li>
+                        <li><a href="https://twitter.com/devdacoder">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/devdhacoder/">Instagram</a></li>
                     </ul>
                 </div>
             </div>
